--- a/session4/activity1-2.html
+++ b/session4/activity1-2.html
@@ -1,8 +1,11 @@
-<script>
-    function sayHello(name) {
-        alert( "hello " + name);
-        // there is no return statement!
-    }
-    var name = prompt("what is your name?");
-    sayHello(name);
-</script>
+<html>
+    <body>
+        <script>
+            function sayHello(name) {
+                alert( "hello " + name);
+            }
+            var name = prompt("what is your name?");
+            sayHello(name);
+        </script>
+    </body>
+</html>
