--- a/session4/activity1-2.html
+++ b/session4/activity1-2.html
@@ -1,11 +1,7 @@
 <html>
     <body>
         <script>
-            function sayHello(name) {
-                alert( "hello " + name);
-            }
-            var name = prompt("what is your name?");
-            sayHello(name);
+            document.body.writeln("<h1> This is my page</h1>");
         </script>
     </body>
 </html>
