--- a/session4/activity1-1.html
+++ b/session4/activity1-1.html
@@ -1,10 +1,10 @@
 <html>
     <body>
+        <button onclick="say_hello()">Say hello</button>
         <script>
            function say_hello() {
                alert("hello from HTML");
            }
         </script>
-        <button onclick="say_hello">Say hello</button>
     </body>
 </html>
